<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/menu_map"
            android:title="@string/menu_map"
            android:icon="@drawable/menu_map" />
        <item
            android:id="@+id/menu_account"
            android:icon="@drawable/menu_account"
            android:title="@string/menu_account" />

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/menu_search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/menu_prizes"
            android:icon="@drawable/menu_prizes"
            android:title="@string/menu_prizes" />

</menu>