<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14sp"
        android:layout_marginRight="24sp"
        android:layout_marginBottom="14sp"
        android:layout_marginLeft="24sp">

        <TextView
            android:id="@+id/privacyIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMagpieDarkGray"
            android:textSize="18sp"
            android:text="@string/privacyIntro"
            />
        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/privacyIntroBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_below="@+id/privacyIntro"
            android:text="@string/privacyIntroBody"
            />
        <TextView
            android:id="@+id/privacySecI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textColor="@color/colorMagpieDarkGray"
            android:textSize="18sp"
            android:layout_below="@+id/privacyIntroBody"
            android:text="@string/privacySecI"
            />
        <TextView
            android:id="@+id/privacySecIBody"
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_below="@+id/privacySecI"
            android:text="@string/privacySecIBody"
            />
        <TextView
            android:id="@+id/privacySecII"
            android:layout_below="@+id/privacySecIBody"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMagpieDarkGray"
            android:textSize="18sp"
            android:text="@string/privacySecII"
            />
        <TextView
            android:id="@+id/privacySecIIBody"
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_below="@+id/privacySecII"
            android:text="@string/privacySecIIBody"
            />
        <Button
            android:id="@+id/privacyAcceptBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/privacySecIIBody"
            android:background="@drawable/standard_button"
            android:layout_marginTop="10sp"
            android:text="ACCEPT"
            android:textColor="@color/colorMagpieDarkGray"
            android:textSize="20sp"
            android:layout_marginBottom="48sp"/>
    </RelativeLayout>
</ScrollView>